--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <p>hello world!</p>
+<a href="JavaScript/gobang/index.html">Gobang</a>
 <a href="JavaScript/carouselFigure/index.html">Carousel Figure</a>
