--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <p>hello world!</p>
-<a href="JavaScript/gobang/index.html">Gobang</a>
-<a href="JavaScript/carouselFigure/index.html">Carousel Figure</a>
+<a href="gobang/index.html">Gobang</a>
+<a href="carouselFigure/index.html">Carousel Figure</a>
+<a href="megaDropDown/index.html">Mega Drop Down</a>
