change the index

--- a/index.html
+++ b/index.html
@@ -1,4 +1,30 @@
-<p>hello world!</p>
-<a href="gobang/index.html">Gobang</a>
-<a href="carouselFigure/index.html">Carousel Figure</a>
-<a href="megaDropDown/index.html">Mega Drop Down</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Portfolio</title>
+  <style type="text/css">
+    * {
+      font-family: Heveltica, Arial, sans-serif;
+    }
+    p {
+      font-weight: bold;
+    }
+    a {
+      text-decoration: none;
+      background-color: #666;
+      color: #fff;
+      font-size: 20px;
+      line-height: 40px;
+      padding: 2px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Hello World!</h1>
+  <ul>
+    <li><a href="gobang/index.html">Gobang</a></li>
+    <li><a href="carouselFigure/index.html">Carousel Figure</a></li>
+    <li><a href="megaDropDown/index.html">Mega Drop Down</a></li>
+</body>
+</html>
